fix layout bug after change

--- a/css/me.css
+++ b/css/me.css
@@ -114,12 +114,12 @@
 
 #meGalleryPanel {
   grid-column: 2 / 3;
-  grid-row: 3;
+  grid-row: 6;
 }
 
 .me-panel--danger {
   grid-column: 2 / 3;
-  grid-row: 4;
+  grid-row: 5;
 }
 
 #meThoughtsPanel {
